# ibutsu-server

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .sourcery.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  README.md  build.sh  build_deploy.sh  codecov.yml  docker-compose-fuzz.yml  docker-compose.dev.yml  docker-compose.yml  ibutsu-server-openshift.yaml  ibutsu_pod.yaml  package.json  podman_build.sh  renovate.json
backend/: .dockerignore  CONNEXION3_MIGRATION.md  Containerfile  FLASK3_MIGRATION.md  HATCH_USAGE.md  MIGRATION_SUMMARY.md  MIGRATION_TO_ALEMBIC.md  alembic.ini  celery_worker.sh  config.py  default.settings.yaml  entry_points.txt  main.py  pyproject.toml  requirements-pinned.txt  settings.yaml  setup.cfg  setup.py  test-requirements.txt  tox.ini  worker-entrypoint.sh  wsgi.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 53994db980f1_enforce_import_created_not_null_and_add_.py  8cf9148b9ad9_add_cascade_delete_to_import_files.py  cacecc4f1237_initial_baseline_schema.py  d18de2b3253f_backfill_pass_percent_in_run_summary.py  e5736dbcc0b0_merge_perfscale_project_into_insights_qe.py  fc3df1d9ee4e_remove_unused_meta_table_and_add_.py
backend/docker/: Dockerfile.backend  Dockerfile.flower  Dockerfile.fuzz_testing  Dockerfile.mongodb  Dockerfile.monitor  Dockerfile.scheduler  Dockerfile.worker  entrypoint.sh  mongod.conf  start_fuzz_testing.sh
backend/ibutsu_server/: __init__.py  __main__.py  auth.py  celery_utils.py  config.py  constants.py  encoder.py  errors.py  filters.py  mongo.py  pytest_plugin.py  templating.py
backend/ibutsu_server/controllers/: artifact_controller.py  dashboard_controller.py  group_controller.py  health_controller.py  import_controller.py  login_controller.py  portal_controller.py  project_controller.py  report_controller.py  result_controller.py  run_controller.py  security_controller_.py  task_controller.py  user_controller.py  widget_config_controller.py  widget_controller.py
backend/ibutsu_server/controllers/admin/: portal_controller.py  project_controller.py  user_controller.py
backend/ibutsu_server/db/: UPGRADE_9_SUMMARY.md  __init__.py  base.py  models.py  types.py  upgrades.py  util.py
backend/ibutsu_server/fixtures/: __init__.py
backend/ibutsu_server/models/: __init__.py  artifact.py  artifact_list.py  base_model_.py  group.py  group_list.py  health.py  healthrating.py  pagination.py  project.py  project_list.py  report.py  report_list.py  report_parameters.py  result.py  result_list.py  run.py  run_list.py
backend/ibutsu_server/openapi/: openapi.yaml
backend/ibutsu_server/scripts/: mongo2postgres.py
backend/ibutsu_server/tasks/: __init__.py  db.py  importers.py  monitor.py  query.py  queues.py  reports.py  results.py  runs.py
backend/ibutsu_server/templates/: list.html  result.html
backend/ibutsu_server/templates/reports/: exception-report.html  html-report.html
backend/ibutsu_server/test/: __init__.py  conftest.py  test_admin_project_controller.py  test_admin_user_controller.py  test_artifact_controller.py  test_dashboard_controller.py  test_group_controller.py  test_health_controller.py  test_ibutsu_server.py  test_import_controller.py  test_import_controller_enhanced.py  test_importers.py  test_init.py  test_login_controller.py  test_portal_controller.py  test_project_controller.py  test_report_controller.py  test_result_controller.py  test_run_controller.py  test_task_controller.py  test_tasks.py  test_user_controller.py  test_widget_config_controller.py  test_widget_controller.py  test_widgets_result_summary.py
backend/ibutsu_server/test/res/: combined.xml  empty-testsuite.xml  merged-with-props.xml
backend/ibutsu_server/util/: __init__.py  admin.py  app_context.py  celery_task.py  cors.py  count.py  json.py  jwt.py  keycloak.py  login.py  oauth.py  portals.py  projects.py  query.py  redis_lock.py  urls.py  uuid.py  widget.py
backend/ibutsu_server/widgets/: accessibility_analysis.py  accessibility_dashboard_view.py  compare_runs_view.py  filter_heatmap.py  importance_component.py  jenkins_heatmap.py  jenkins_job_analysis.py  jenkins_job_view.py  result_aggregator.py  result_summary.py  run_aggregator.py
backend/scripts/: README.md  init_db.py
backend/tests/: TEST_GUIDE.md  conftest.py  test_alembic_env.py  test_base_model.py  test_celery_app.py  test_celery_utils.py  test_encoder.py  test_filters.py  test_ibutsu_server.py  test_importers.py  test_init.py  test_main.py  test_tasks.py  test_templating.py  test_upgrades.py  test_util.py  test_widgets.py
backend/tests/controllers/: test_admin_project_controller.py  test_admin_user_controller.py  test_artifact_controller.py  test_dashboard_controller.py  test_group_controller.py  test_health_controller.py  test_import_controller.py  test_login_controller.py  test_project_controller.py  test_result_controller.py  test_run_controller.py  test_security_controller.py  test_task_controller.py  test_user_controller.py  test_widget_config_controller.py  test_widget_controller.py
backend/tests/db/: test_db_util.py  test_util.py
backend/tests/fixtures/: README.md  __init__.py  auth.py  constants.py  database.py  loader.py  utilities.py
backend/tests/fixtures/data/: SAMPLE_TEST_DATA_SUMMARY.md  log_authentication_failure.txt  log_performance_metrics.txt  log_traceback.txt  sample_test_data.json  sample_test_data.xml  (+1 more)
backend/tests/helpers/: __init__.py  assertions.py  db_builders.py  factories.py
backend/tests/res/: collection.xml
backend/tests/tasks/: test_db.py  test_query.py  test_results.py  test_runs.py  test_tasks_init.py
backend/tests/util/: test_count.py  test_keycloak.py  test_login.py  test_oauth.py
backend/tests/widgets/: conftest.py  test_accessibility_analysis.py  test_accessibility_dashboard_view.py  test_compare_runs_view.py  test_filter_heatmap.py  test_importance_component.py  test_jenkins_heatmap.py  test_jenkins_job_analysis.py  test_jenkins_job_view.py  test_result_aggregator.py  test_run_aggregator.py  test_widgets_result_summary.py
(+350 files in other folders)
