[project]
version = "2.7.2"
name = "ibutsu_server"
description = "A system to store and query test results and artifacts"
authors = [
    {name = "Raoul Snyman"},
    {name = "John Dupuy", email = "jdupuy26@gmail.com"},
]
maintainers = [
    {name = "Mike Shriver", email = "mshriver@redhat.com"},
    {name = "Egor Shamardin", email = "eshamard@redhat.com"},
]
keywords = ["OpenAPI", "Ibutsu"]
requires-python = ">=3.9"



classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

dependencies = [
    "alembic",
    "celery",
    "connexion[swagger-ui]>=3.0.0",
    "connexion[flask]>=3.0.0",
    "flask_bcrypt",
    "flask_mail",
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.0",
    "starlette",
    "uvicorn[standard]",
    "flatdict",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "gunicorn",
    "kombu",
    "lxml",
    "psycopg2",
    "pyjwt",
    "pymongo",
    "python-magic",
    "python_dateutil",
    "PyYAML",
    "redis",
    "setuptools",
    "sqlalchemy-json",
    "sqlalchemy>=2.0.0",
    "swagger-ui-bundle",
    "vine",
    "werkzeug>=3.0.0",
]

[project.urls]
Source = "https://github.com/ibutsu/ibutsu-server"


[project.optional-dependencies]
test = [
  "hatch",
  "pre-commit",
  "pytest",
  "Flask-Testing",
  "coverage",
  "pluggy",
  "py",
  "pytest-mock",
  "randomize",
  "uv",
]


[project.scripts]
ibutsu_server = "ibutsu_server.__main__:main"

[project.entry-points.pytest11]
ibutsu_server = "ibutsu_server.pytest_plugin"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.setuptools]
raw-options.include_package_data = true
raw-options.package_data = {"" = ["openapi/openapi.yaml"]}

# move to src layout
# don't package tests, so they can be run without editable install
[tool.hatch.build.targets.wheel]
packages = ["ibutsu_server"]
exclude = ["docker/"]


[tool.hatch.envs.default]
python = "3.9"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
